--- a/Hackthon_Bank.PS/style.css
+++ b/Hackthon_Bank.PS/style.css
@@ -1,7 +1,7 @@
 
     body {
       font-family: 'Cairo', sans-serif;
-      background: #f7f1f8 url('https://www.transparenttextures.com/patterns/diamond-upholstery.png') repeat;
+      background: #faeff3 url('https://www.transparenttextures.com/patterns/diamond-upholstery.png') repeat;
       color: #333;
       min-height: 100vh;
       margin: 0;
@@ -9,7 +9,7 @@
     }
 
   .custom-close-btn {
-    border: 2px solid #c20079;
+    border: 2px solid #ff1169;
     color: black;
     background-color: transparent;
     transition: all 0.3s ease;
@@ -17,11 +17,11 @@
 
   .custom-close-btn:hover,
   .custom-close-btn:focus {
-    background-color: #c20079;
+    background-color: #ff1169;
     color: white;
   }
     .header {
-      background: linear-gradient(135deg, #c20079, #d080b7);
+      background: linear-gradient(135deg, #ff1169, #b3b1b2);
       color: white;
       padding: 1.5rem 0;
       border-radius: 15px;
@@ -47,7 +47,7 @@
     }
 
     .card-header {
-      background: #c20079;
+      background: #ff1169;
       color: white;
       font-weight: 700;
       border-radius: 15px 15px 0 0;
@@ -57,15 +57,15 @@
     }
 
     .btn-outline-primary {
-      color: #c20079;
-      border-color: #c20079;
+      color: #ff1169;
+      border-color: #ff1169;
       font-weight: 600;
     }
 
     .btn-outline-primary:hover {
-      background-color: #c20079;
+      background-color: #ff1169;
       color: white;
-      box-shadow: 0 0 10px #c20079;
+      box-shadow: 0 0 10px #ff1169;
     }
 
     .sentiment-badge {
@@ -165,7 +165,7 @@
     }
 
     .text-read {
-  color: #c20079;
+  color: #ff1169;
 }
 
     .support-header {
@@ -228,10 +228,10 @@
     color: black;
   }
   .custom-swal-icon::before {
-    color: #c20079 !important;
+    color: #ff1169 !important;
   }
   .custom-swal-button {
-    background-color: #c20079 !important;
+    background-color: #ff1169 !important;
     color: #fff !important;
     border: none;
   }
